Step2: Achieved 100% branch coverage for task14 string prefix logic
Added JUnit 5 test cases for null/empty handling and sequential prefix generation.
Verified full branch coverage using Jacoco.